# Complete_RAG_Systems

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
AdaptiveRAG/: ARAGMemorySaver.ipynb
AgenticRAG/: AgenticRAGRewrite.ipynb  AgenticReactRAG.ipynb  ChainOfThoughRAG.ipynb  SelfReflection.ipynb  deriritive.txt
ChatBotRAG/: chatbotEval.ipynb
CorrectiveRAG/: CRAG.ipynb
EnhancementStrategies/: HybridRetriever(SparseDense).ipynb  MMR.ipynb  RerankingHybridRetriever.ipynb  SemanticChunks.ipynb  تال چیست.txt  حباب سکه چیست.txt
MultiAgentRAG/: multiagent.ipynb  supervisorMultiAgent.ipynb
MultimodalRAG(Jobvision_report_1403)/: multimodal_1.ipynb  multimodal_colab.ipynb
QueryEnhancement/: HyDe.ipynb  QueryDecomposition.ipynb  QueryExpansion.ipynb
QueryEnhancement/output/langchain/: chroma.sqlite3
QueryEnhancement/output/maryam_mirzakhani.db/: chroma.sqlite3
VectorEmbedding/: Embedding.ipynb
VectoreStore/: FAISS_GROQ.ipynb  colabAstradb&PineCone.ipynb  vectoreStoreChromaDB.ipynb
VectoreStore/chroma_db/: chroma.sqlite3
VectoreStore/faiss_db/: index.faiss  index.pkl
data_management/: adding.ipynb
data_management/csv_files/: data dictionary.csv
data_management/word_files/: با سلام و عرض ادب.docx
nlp/: Sound_Identifier.ipynb
