[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.1",
    "genai>=1.0.3",
    "google-cloud-aiplatform>=1.130.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jq>=1.10.0",
    "jupyter>=1.1.1",
    "langchain==1.2.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-google-genai>=4.0.0",
    "langchain-google-vertexai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.4",
    "langgraph-supervisor>=0.0.31",
    "matplotlib>=3.10.7",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.5.0",
    "mysqlclient>=2.2.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfminer>=20191125",
    "psycopg2>=2.9.11",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "semantic-text-splitter>=0.28.0",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.21",
    "uuid>=1.30",
    "wikipedia>=1.4.0",
]
